scrollbars fix for menu

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,8 @@
---- # Only the main Sass file needs front matter (the dashes are enough) --- @import "{{ site.theme }}";
+--- 
+# Only the main Sass file needs front matter (the dashes are enough) 
+--- 
 
+@import "{{ site.theme }}";
 .site-header {
 	border: none;
 }
